Adding more to index.html, adding a codecademy.html page, and adding an about.html page

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <!--Header/Navigation Bar-->
     <div class='container'>
         <div id='header'>
-            <div id='brand'>
+            <div id='brand'><a href='index.html'>
                 <h2>Brian Hoeynck</h2>
-                <p>A Junior Web Developer</p>
-            </div>
+                <p>A Junior Web Developer in Milwaukee</p>
+            </a></div>
 
             <ul class='nav-links'>
                 <li ><a class='active' href='index.html'>Home</a></li>
-                <li><a href='about.html'>About Me</a></li>
-                <li><a href='#'>Independent Work</a></li>
-                <li><a href='#'>Codecademy</a></li>
-                <li><a href='#'>Treehouse</a></li>
-                <li><a href='#'>Contact</a></li>
+                <li><a href='about.html'>About</a></li>
+                <li><a href='independent.html'>Independent Design</a></li>
+                <li><a href='codecademy.html'>Codecademy</a></li>
+                <li><a href='treehouse.html'>Treehouse</a></li>
+                <li><a href='contact.html'>Contact</a></li>
             </ul>
         </div>
     </div>
@@ -54,16 +54,19 @@
                 <h2>Independent Designs</h2>
                 <img src='img/psc-index.png' alt='Treehouse Icon'>
                 <p>Check out some of my own personal projects, ranging from a rebuild of a site built with SquareSpace and a fake STL Cardinals blog.</p>
-            </div><hr class='hidden-sm hidden-md hidden-lg'>
+                <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
+            </div><hr class='hidden-xs hidden-sm hidden-md hidden-lg'>
             <div class='col-sm-4 support'>
                 <h2>Codecademy Work</h2>
                 <img src='img/codecademy.png' alt='Codecademy Icon'>
                 <p >See how I use HTML, CSS, and Bootstrap in conjunction to build website designs created by the team at Codecademy.</p>
-            </div><hr class='hidden-sm hidden-md hidden-lg'>
+                <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
+            </div><hr class='hidden-xs hidden-sm hidden-md hidden-lg'>
             <div class='col-sm-4 support'>
                 <h2>Treehouse Projects</h2>
                 <img src='img/treehouse.jpg' alt='Treehouse Icon'>
                 <p>Explore some of the projects built through Treehouse, including HTML/CSS websites, Javascript quizzes, and jQuery games.</p>
+                <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
             </div>
         </div>
     </div>
