--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         <div class='row support-cols'>
             <div class='col-sm-4 support'>
                 <h2>Independent Designs</h2>
-                <img src='img/psc-index.png' alt='Treehouse Icon'>
+                <a href='independent.html'><img src='img/psc-index.png' alt='Treehouse Icon'></a>
                 <p>Check out some of my own personal projects, ranging from a rebuild of a site built with SquareSpace and a fake STL Cardinals blog.</p>
                 <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
             </div><hr class='hidden-xs hidden-sm hidden-md hidden-lg'>
             <div class='col-sm-4 support'>
                 <h2>Codecademy Work</h2>
-                <img src='img/codecademy.png' alt='Codecademy Icon'>
+                <a href='codecademy.html'><img src='img/codecademy.png' alt='Codecademy Icon'></a>
                 <p >See how I use HTML, CSS, and Bootstrap in conjunction to build website designs created by the team at Codecademy.</p>
                 <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
             </div><hr class='hidden-xs hidden-sm hidden-md hidden-lg'>
             <div class='col-sm-4 support'>
                 <h2>Treehouse Projects</h2>
-                <img src='img/treehouse.jpg' alt='Treehouse Icon'>
+                <a href='treehouse.html'><img src='img/treehouse.jpg' alt='Treehouse Icon'></a>
                 <p>Explore some of the projects built through Treehouse, including HTML/CSS websites, Javascript quizzes, and jQuery games.</p>
                 <!--<a href='#' class='btn btn-md btn-default'>Go!</a>-->
             </div>
