Added another project to independent designs page

--- a/independent.html
+++ b/independent.html
@@ -227,7 +227,88 @@
         <!--End Project #2 -- Birds on the Bat -->
 
 
+        <!--Project #3 -- Personal Book Blog -->
 
+        <div class='projects-overall'>
+            <div class='projects'>
+                <h4>Project #3 - personal book blog</h4>
+                <p>Ut eum elit nobis salutandi, minimum suavitate efficiendi ex sit, ludus choro torquatos usu at. In lorem invidunt referrentur pri, stet simul solet qui no. An mel prompta inciderint. In veri posse mel. Vero eloquentiam mel ea, te unum accumsan nam, eam omnium inciderint ut. No pro debet signiferumque.</p>
+                <p>See my whole design <a class='codepen-links' href='https://github.com/bhoeynck11/book-blog' target="_blank">here (GitHub).</a></p>
+            </div>
+            <div class='container'>
+
+                <div class='row'>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-1.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-1.png'></a>
+                        <h5>Home Page</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-2.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-2.png'></a>
+                        <h5>bottom of home page/footer</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-3.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-3.png'></a>
+                        <h5>roster page</h5>
+                    </div>
+                </div>
+
+                <div class='row'>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-4.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-4.png'></a>
+                        <h5>roster page with modal window</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-5.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-5.png'></a>
+                        <h5>blog</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/pic-6.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-6.png'></a>
+                        <h5>contact page</h5>
+                    </div>
+                </div>
+
+                <hr class='site-hr'>
+
+                <div class='row'>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-1.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-1.png'></a>
+                        <h5>mobile view - home page</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-2.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-2.png'></a>
+                        <h5>mobile view - roster page</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-3.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-3.png'></a>
+                        <h5>mobile view - roster page with modal window</h5>
+                    </div>
+                </div>
+
+                <div class='row'>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-4.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-4.png'></a>
+                        <h5>mobile view - blog</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-5.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-5.png'></a>
+                        <h5>mobile view - contact page</h5>
+                    </div>
+                    <div class='col-md-4'>
+                        <a class='gallery-images' href='img/ind-book-blog/mobile-6.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-6.png'></a>
+                        <h5>mobile view - navbar dropdown</h5>
+                    </div>
+                </div>
+
+
+                <hr class='site-hr'>
+
+
+            </div>
+
+
+        </div>
+
+        <!--End Project #3 -- Personal Book Blog -->
 
 
 
