Added captions to projects 1-6 of codecademy photos

--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
                     <div class='col-sm-6 contact-ways'>
                         <h3>Ways to contact me</h3>
                         <ul style="text-align:center">
-                            <li><a href='mailto:bhoeynck11@gmail.com'><img src='img/envelope.svg' class='img-contact'>Email Me</a></li>
+                            <li><a href='mailto:bhoeynck11@gmail.com' target="_blank"><img src='img/envelope.svg' class='img-contact'>Email Me</a></li>
                             <li><a href='https://github.com/bhoeynck11' target="_blank"><img src='img/github.svg'>GitHub Profile</a></li>
-                            <li><a href='https://www.facebook.com/brian.hoeynck'><img src='img/SVG/facebook.svg' class='img-contact'>Facebook Page</a></li>
-                            <li><a href='https://www.linkedin.com/in/brian-hoeynck-7a2b1152'><img src='img/SVG-contact/linkedin-contact.svg' class='img-contact'>LinkedIn Profile</a></li>
+                            <li><a target="_blank" href='https://www.facebook.com/brian.hoeynck'><img src='img/SVG/facebook.svg' class='img-contact'>Facebook Page</a></li>
+                            <li><a target='_blank' href='https://www.linkedin.com/in/brian-hoeynck-7a2b1152'><img src='img/SVG-contact/linkedin-contact.svg' class='img-contact'>LinkedIn Profile</a></li>
                         </ul>
                     </div>
                     
