Added more to the about page

--- a/independent.html
+++ b/independent.html
@@ -118,14 +118,14 @@
 
             <div class='container-flex'>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-1.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-1.png'></a>
-                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-2.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-2.png'></a>
-                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-3.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-3.png'></a>
+                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-2.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-2.png' style='border-color:red'></a>
+                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-3.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-3.png' style='border-color:red'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-4.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-4.png'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-5.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-5.png'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/pic-6.png'><img class='img-responsive project-imgs-main' src='img/ind-book-blog/pic-6.png'></a>
-                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-1.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-1.png'></a>
-                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-2.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-2.png'></a>
-                <a data-lightbox="ind-books" class='gallery-images' href='img/ind-book-blog/mobile-3.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-3.png'></a>
+                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-1.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-1.png' ></a>
+                <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-2.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-2.png' style='border-color:red'></a>
+                <a data-lightbox="ind-books" class='gallery-images' href='img/ind-book-blog/mobile-3.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-3.png' style='border-color:red'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-4.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-4.png'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-5.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-5.png'></a>
                 <a data-lightbox="ind-books"class='gallery-images' href='img/ind-book-blog/mobile-6.png'><img class='img-responsive project-imgs-mobile' src='img/ind-book-blog/mobile-6.png'></a>
