--- a/about.html
+++ b/about.html
@@ -54,8 +54,20 @@
             <div class='row about'>
                 <div class='col-sm-7'>
                     <h2>education</h2>
-                    <p>Petentium dissentiunt an vis, vero illum reformidans mel ut, diam novum detraxit eu vis. Doctus noluisse te nam, dolore officiis efficiendi ea mei, his ad detraxit periculis. Ut aliquid habemus voluptatibus per. Cu solum oporteat per, elitr dolor mea ex. Eu epicuri moderatius ius, vim etiam soleat repudiare ei.</p>
-                    <p>Nisl perfecto pri in, eos exerci recusabo cu. Id mazim ridens liberavisse usu, has ut volutpat consequat. Laudem elaboraret te pro, ferri tamquam usu ad. Abhorreant vituperatoribus ne vel, nec id quem mutat dolores. Mei et minim utinam habemus, sit nullam qualisque ei. Eos et quando animal minimum, dolorum vivendo percipitur eam ne.</p>
+                    <ul class='about-lists'>
+                        <li><span>Marquette University</span></li>
+                            <ul class='about-lists-sub'>
+                                <li>Bachelors of Science, Biomedical Sciences</li>
+                                <li>Minor in Economics</li>
+                            </ul>
+                        <li><span>Team Treehouse</span></li>
+                            <ul class='about-lists-sub'>
+                                <li>Courses in HTML, CSS, Javascript and jQuery</li>
+                            </ul>
+                        <li><span>Codecademy</span></li>
+                        <li><span>Free Code Camp</span></li>
+                        <li><span>Udemy - Complete Front End Web Developer Course</span></li>
+                    </ul>
                 </div>
                 <div class='col-sm-4 col-sm-offset-1'>
                     <img src='img/school.svg'>
@@ -68,8 +80,21 @@
                 </div>
                 <div class='col-sm-7 col-sm-offset-1'>
                     <h2>SKILLS</h2>
-                    <p>Petentium dissentiunt an vis, vero illum reformidans mel ut, diam novum detraxit eu vis. Doctus noluisse te nam, dolore officiis efficiendi ea mei, his ad detraxit periculis. Ut aliquid habemus voluptatibus per. Cu solum oporteat per, elitr dolor mea ex. Eu epicuri moderatius ius, vim etiam soleat repudiare ei.</p>
-                    <p>Nisl perfecto pri in, eos exerci recusabo cu. Id mazim ridens liberavisse usu, has ut volutpat consequat. Laudem elaboraret te pro, ferri tamquam usu ad. Abhorreant vituperatoribus ne vel, nec id quem mutat dolores. Mei et minim utinam habemus, sit nullam qualisque ei. Eos et quando animal minimum, dolorum vivendo percipitur eam ne.</p>
+                    <ul class='about-lists'>
+                        <li><span>HTML</span></li>
+                        <li><span>CSS</span></li>
+                            <ul class='about-lists-sub'>
+                                <li>Frameworks like Twitter Bootstrap and Foundation, Transitions and Transformations, Flexbox</li>
+                            </ul>
+                        <li><span>JavaScript/jQuery</span></li>
+                            <ul class='about-lists-sub'>
+                                <li>Loops, Arrays, Opject-Oriented JavaScript, AJAX, jQuery plugins</li>
+                            </ul>
+                        <li><span>Additional Skills</span></li>
+                            <ul class='about-lists-sub'>
+                                <li>Responsive Web Design; Git and GitHub; some PHP</li>
+                            </ul>
+                    </ul>
                 </div>
             </div>
             <hr class='site-hr'>
