Added captions to some photos on independent designs page

--- a/about.html
+++ b/about.html
@@ -88,8 +88,9 @@
                             </ul>
                         <li><span>JavaScript/jQuery</span></li>
                             <ul class='about-lists-sub'>
-                                <li>Loops, Arrays, Opject-Oriented JavaScript, AJAX, jQuery plugins</li>
+                                <li>Loops, Arrays, Object-Oriented JavaScript, AJAX, jQuery plugins</li>
                             </ul>
+                        <li><span>WordPress</span></li>
                         <li><span>Additional Skills</span></li>
                             <ul class='about-lists-sub'>
                                 <li>Responsive Web Design; Git and GitHub; some PHP</li>
